# djangoTodo

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
djangoTodo/: asgi.py  settings.py  urls.py  wsgi.py
djangoTodo/static/admin/js/admin/: DateTimeShortcuts.js
djangoTodo/static/bootstrap/js/: bootstrap.esm.js  bootstrap.js
djangoTodo/static/todo/css/: style.css
static/bootstrap/js/: bootstrap.bundle.js
static/css/: style.css
static/todo/css/: style.css
templates/: task_list_base.html  todo_base.html
templates/inc/: _header.html
todo/: admin.py  forms.py  models.py  services.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_bigtask_description_category_description_and_more.py  0002_initial.py  0003_alter_bigtask_due_date_date_and_more.py  0004_alter_bigtask_due_date_date_and_more.py  0005_bigtask_status_task_status.py
todo/templates/todo/: addTask.html  all_tasks_list.html  index.html  plan_task_list.html  viewTask.html
users/: admin.py
users/migrations/: 0001_initial.py
