[tool.poetry]
name = "djangotodo"
version = "0.1.0"
description = ""
authors = ["ilnarka1337 <minejooker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
psycopg2 = "^2.9.6"
django-mptt = "^0.14.0"
django-filter = "^23.2"
whitenoise = "^6.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
